Finish tracking code, add small model for testing

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -3,5 +3,5 @@
 input_video_path=data/small_videos/6.2.5_C1_trim.mp4
 input_segmentation=database.200731.1.csv
 output_dir=output
-output_video_name=output_video_test.mp4
+output_video_name=output_video_test.avi
 
