--- a/configs/config_tracking.ini
+++ b/configs/config_tracking.ini
@@ -4,5 +4,6 @@ model_path=tracking/alex_dwxcorr.pth
 model_config=configs/alex_dwxcorr.yaml
 input_video_path=tracking/1.1.4_C1_cut.mp4
 input_label_path=tracking/1.1.4_C1_labels.csv
-output_video_path=output/tracked_video.avi
+output_video_path=output/1.1.4_C1_tracked.avi
+output_csv_path=output/1.1.4_C1_tracked.csv
 
