add point biserial correlation, saving posterior as pickle

--- a/configs/config_segmenting.ini
+++ b/configs/config_segmenting.ini
@@ -3,6 +3,6 @@
 stickyness=10.0
 concentration=.01
 l2_regularization=0.4
+epochs=1000
 features_csv=2.2.1_features_and_hand.csv
-
-
+posterior_output=2.2.1_posterior.pkl
