--- a/configs/config_tracking_to_correct_label.ini
+++ b/configs/config_tracking_to_correct_label.ini
@@ -1,13 +1,13 @@
 [Tracking]
 
-;model_path=tracking/r50_l234_dwxcorr.pth
-;model_config=configs/r50_l234_dwxcorr.yaml
-model_path=tracking/alex_dwxcorr.pth
-model_config=configs/alex_dwxcorr.yaml
-input_video_path=data/small_videos/1.1.1_C1_trim.mp4
-input_label_path=data/ground_truth_labels/1.1.1_C1_labels.csv
-output_video_path_forward=output/1.1.1_C1_forward_cut3.avi
-output_video_path_backward=output/1.1.1_C1_backward_cut3.avi
-output_video_path_merged=output/1.1.1_C1_merged_cut3.avi
-output_csv_path=output/1.1.1_C1_tracked.csv
+model_path=tracking/r50_l234_dwxcorr.pth
+model_config=configs/r50_l234_dwxcorr.yaml
+;model_path=tracking/alex_dwxcorr.pth
+;model_config=configs/alex_dwxcorr.yaml
+tag=default
+run=4.4.5_C1
+input_video_dir=data/small_videos/
+input_label_dir=data/ground_truth_labels/
+output_video_dir=output/
+output_csv_dir=output/
 
