big update: add computing feature, running SEM

--- a/configs/config_skelfeatures.ini
+++ b/configs/config_skelfeatures.ini
@@ -1,5 +1,5 @@
 [Skel features]
 
-skel_csv_in=skelfeatures/1.1.1_skel_clean.csv
-skel_csv_out=output/1.1.1_skel_features.csv
+skel_csv_in=data/clean_skeleton_data/6.3.3_skel_clean.csv
+skel_csv_out=output/skel/6.3.3_skel_features.csv
 joints=all
