multi process sem, first prototype

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,14 +1,16 @@
 [TEST-SEM]
 seg_path=database.200731.1.csv
-grain=coarse
-movie=data/small_videos/2.2.5_C1_trim.mp4
-objhand_csv=output/objhand/2.2.5_C1_objhand.csv
-skel_csv=output/skel/2.2.5_skel_features.csv
-optical_csv=output/vid/2.2.5_C1_video_features.csv
-appear_csv=output/appear/2.2.5_C1_appear.csv
+grain=fine
+run=4.4.5_C1
+movie=data/small_videos/
+objhand_csv=output/objhand/
+skel_csv=output/skel/
+optical_csv=output/vid/
+appear_csv=output/appear/
 fps=30
 rate=333ms
-end_second=555
+end_second=530
 lmda=10000
 alfa=0.1
 pca_dim=98
+pca_explained=0.95
