multiprocess for extracting features, tidy up fps

--- a/configs/config_objhand_features.ini
+++ b/configs/config_objhand_features.ini
@@ -1,5 +1,6 @@
 [OBJECT-HAND]
 
-input_track_csv=output/tracking/4.4.5_C1_r50.csv
-input_skel_csv=data/clean_skeleton_data/4.4.5_skel_clean.csv
-output_objhand_csv=output/objhand/4.4.5_C1_objhand.csv
+run=4.4.5_C1
+input_track_csv=output/tracking/
+input_skel_csv=data/clean_skeleton_data/
+output_objhand_csv=output/objhand/
