--- a/configs/config_skelfeatures.ini
+++ b/configs/config_skelfeatures.ini
@@ -1,5 +1,6 @@
 [Skel features]
 
-skel_csv_in=data/clean_skeleton_data/6.2.4_skel_clean.csv
-skel_csv_out=output/skel/6.2.4_skel_features.csv
+run=6.2.4_C1
+skel_csv_in=data/clean_skeleton_data/
+skel_csv_out=output/skel/
 joints=all
