--- a/configs/config_vidfeatures.ini
+++ b/configs/config_vidfeatures.ini
@@ -1,7 +1,8 @@
 [Vid Features]
 
-input_video_path=data/small_videos/6.2.4_C1_trim.mp4
-output_csv_path=output/vid/6.2.4_C1_video_features.csv
+run=6.2.4_C1
+input_video_path=data/small_videos/
+output_csv_path=output/vid/
 pyr_scale=0.5
 levels=3
 winsize=15
@@ -9,3 +10,5 @@ iterations=3
 poly_n=5
 poly_sigma=1.2
 flags=0
+skip_frame=10
+
