--- a/configs/config_appear.ini
+++ b/configs/config_appear.ini
@@ -1,4 +1,5 @@
 [Appear]
-input_csv_tracking=output/tracking/6.2.4_C1_r50.csv
+run=6.2.4_C1
+input_csv_tracking=output/tracking/
 ;input_csv_tracking=data/merged/6.2.4_C1_merged.csv
-output_csv_appear=output/appear/6.2.4_C1_appear.csv
+output_csv_appear=output/appear/
