add try except to track error and complete runs, add txt files

--- a/configs/config_appear.ini
+++ b/configs/config_appear.ini
@@ -1,5 +1,6 @@
 [Appear]
-run=6.2.4_C1
+;run=6.2.4_C1
+run=feasible_runs.txt
 input_csv_tracking=output/tracking/
 ;input_csv_tracking=data/merged/6.2.4_C1_merged.csv
 output_csv_appear=output/appear/
