--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,7 +1,8 @@
 [TEST-SEM]
 seg_path=database.200731.1.csv
 grain=fine
-run=4.4.5_C1
+;run=4.4.5_C1
+run=intersect_features.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
 skel_csv=output/skel/
