--- a/configs/config_skelfeatures.ini
+++ b/configs/config_skelfeatures.ini
@@ -1,6 +1,7 @@
 [Skel features]
 
-run=6.2.4_C1
-skel_csv_in=data/clean_skeleton_data/
+;run=6.2.4_C1
+run=feasible_runs.txt
+skel_csv_in=data/projected_skeletons/
 skel_csv_out=output/skel/
 joints=all
