--- a/configs/config_objhand_features.ini
+++ b/configs/config_objhand_features.ini
@@ -1,6 +1,8 @@
 [OBJECT-HAND]
 
-run=4.4.5_C1
+;run=4.4.5_C1
+run=feasible_runs.txt
 input_track_csv=output/tracking/
-input_skel_csv=data/clean_skeleton_data/
+;input_skel_csv=data/clean_skeleton_data/
+input_skel_csv=data/projected_skeletons/
 output_objhand_csv=output/objhand/
