refactor to switch frictionless, fix bug kinect resampling

--- a/configs/config_objhand_features.ini
+++ b/configs/config_objhand_features.ini
@@ -1,8 +1,8 @@
 [OBJECT-HAND]
 
 ;run=4.4.5_C1
-run=feasible_runs.txt
+run=track_complete.txt
 input_track_csv=output/tracking/
-;input_skel_csv=data/clean_skeleton_data/
-input_skel_csv=data/projected_skeletons/
+input_skel_csv=data/clean_skeleton_data/
+;input_skel_csv=data/projected_skeletons/
 output_objhand_csv=output/objhand/
