--- a/configs/config_appear.ini
+++ b/configs/config_appear.ini
@@ -1,6 +1,6 @@
 [Appear]
-;run=6.2.4_C1
-run=feasible_runs.txt
+;run=1.1.1_kinect
+run=track_complete.txt
 input_csv_tracking=output/tracking/
 ;input_csv_tracking=data/merged/6.2.4_C1_merged.csv
 output_csv_appear=output/appear/
