--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,14 +1,13 @@
 [TEST-SEM]
 seg_path=database.200731.1.csv
 grain=fine
-;run=3.3.10_C1
+;run=1.1.1_kinect
 run=intersect_features.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
 skel_csv=output/skel/
 optical_csv=output/vid/
 appear_csv=output/appear/
-fps=30
 rate=333ms
 end_second=530
 lmda=10000
