--- a/configs/config_vidfeatures.ini
+++ b/configs/config_vidfeatures.ini
@@ -1,7 +1,7 @@
 [Vid Features]
 
 ;run=6.2.4_C1
-run=feasible_runs.txt
+run=track_complete.txt
 input_video_path=data/small_videos/
 output_csv_path=output/vid/
 pyr_scale=0.5
