diagnostic based on e_hat, preprocess individual segmentations

--- a/configs/config_objhand_features.ini
+++ b/configs/config_objhand_features.ini
@@ -1,6 +1,6 @@
 [OBJECT-HAND]
 
-;run=4.4.5_C1
+;run=1.1.1_kinect
 run=track_complete.txt
 input_track_csv=output/tracking/
 input_skel_csv=data/clean_skeleton_data/
