--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,7 +1,7 @@
 [TEST-SEM]
 seg_path=database.200731.1.csv
 grain=fine
-;run=1.1.1_kinect
+;run=2.3.6_kinect
 run=intersect_features.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
@@ -9,8 +9,7 @@ skel_csv=output/skel/
 optical_csv=output/vid/
 appear_csv=output/appear/
 rate=333ms
-end_second=530
-lmda=10000
-alfa=0.1
+lmda=10000000
+alfa=10
 pca_dim=98
 pca_explained=0.95
