weighted distance, add readouts for input and output to visualize

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,7 +1,7 @@
 [TEST-SEM]
 seg_path=database.200731.1.csv
 grain=fine
-;run=2.3.6_kinect
+;run=1.2.5_kinect
 run=intersect_features.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
@@ -13,3 +13,4 @@ lmda=10000000
 alfa=10
 pca_dim=98
 pca_explained=0.95
+pca=0
