process depth from kinect to calculate distance

--- a/configs/config_objhand_features.ini
+++ b/configs/config_objhand_features.ini
@@ -1,7 +1,8 @@
 [OBJECT-HAND]
 
-;run=1.1.1_kinect
-run=track_complete.txt
+run=4.4.4_kinect
+;run=track_complete.txt
+;run=depth.txt
 input_track_csv=output/tracking/
 input_skel_csv=data/clean_skeleton_data/
 ;input_skel_csv=data/projected_skeletons/
