Add comments and refactor

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,16 +1,18 @@
 [TEST-SEM]
 seg_path=database.200731.1.csv
 grain=fine
-;run=1.2.5_kinect
+;run=4.4.4_kinect
 run=intersect_features.txt
+;run=depth.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
 skel_csv=output/skel/
 optical_csv=output/vid/
 appear_csv=output/appear/
 rate=333ms
-lmda=10000000
-alfa=10
-pca_dim=98
+lmda=1e7
+alfa=1e-7
+pca_dim=30
 pca_explained=0.95
 pca=1
+epochs=30
