plot more types of boundaries, refactor the main pipeline

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,7 +1,7 @@
 [TEST-SEM]
 seg_path=database.200731.1.csv
 grain=fine
-;run=4.4.4_kinect
+;run=2.2.2_kinect
 run=intersect_features.txt
 ;run=depth.txt
 movie=data/small_videos/
@@ -10,9 +10,10 @@ skel_csv=output/skel/
 optical_csv=output/vid/
 appear_csv=output/appear/
 rate=333ms
-lmda=1e7
-alfa=1e-7
+lmda=1e9
+alfa=1e-9
+kappa=1
 pca_dim=30
 pca_explained=0.95
 pca=1
-epochs=30
+epochs=150
