refactor main script, add an option to evaluate and an option to stratify train dataset

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,9 +1,10 @@
 [TEST-SEM]
 seg_path=database.200731.1.csv
 grain=fine
-;run=2.2.2_kinect
-run=intersect_features.txt
-;run=depth.txt
+;train=1.2.5_kinect
+;valid=2.4.7_kinect
+train=train.txt
+valid=valid.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
 skel_csv=output/skel/
@@ -16,4 +17,7 @@ kappa=1
 pca_dim=30
 pca_explained=0.95
 pca=1
-epochs=150
+epochs=8
+num_objects=3
+use_position=1
+train_stratified=1
