--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,9 +1,9 @@
 [TEST-SEM]
 seg_path=database.200731.1.csv
 grain=fine
-;train=1.2.5_kinect
+train=1.1.10_kinect
 ;valid=2.4.7_kinect
-train=train.txt
+;train=train.txt
 valid=valid.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
@@ -18,6 +18,7 @@ pca_dim=30
 pca_explained=0.95
 pca=1
 epochs=8
-num_objects=3
-use_position=1
+num_objects=20
+use_position=0
 train_stratified=1
+n_hidden=16
