refactor preprocess_objhand, use cached features, don't save coordinates, add object speed feature, data_frames to object

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -7,6 +7,7 @@ train=1.1.10_kinect
 valid=valid.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
+objspeed_csv=output/objspeed/
 skel_csv=output/skel/
 optical_csv=output/vid/
 appear_csv=output/appear/
@@ -18,7 +19,10 @@ pca_dim=30
 pca_explained=0.95
 pca=1
 epochs=8
-num_objects=20
+num_objects=3
 use_position=0
 train_stratified=1
 n_hidden=16
+use_cache=1
+cache_tag=april_09_scene_motion_individual
+store_frames=1
