add Sampler, fix number of events plus 2

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,7 +1,7 @@
 [TEST-SEM]
 seg_path=database.200731.1.csv
 grain=fine
-train=2.4.7_kinect
+train=4.4.2_kinect
 ;valid=2.4.7_kinect
 ;train=train.txt
 valid=valid.txt
@@ -18,14 +18,16 @@ kappa=1
 pca_dim=30
 pca_explained=0.95
 pca=1
-# to run individual, change epoch to 1 and stratified to 0, use_cache to 0
-epochs=1
+# to run individual, change epoch to 1 and stratified to 0, use_cache to 0, and use_sampler to 0
+# to change to scene_motion, change cache_tag to april_27 and pca_tag
+epochs=8
 num_objects=3
 use_position=0
-train_stratified=0
+train_stratified=1
 n_hidden=16
-use_cache=0
-cache_tag=april_09_test_refactor_individual
+use_cache=1
+cache_tag=april_29_no_sm_seed_individual
 store_frames=1
 use_shared_pca=1
 pca_tag=april_09_test_refactor_individual
+use_sampler=0
