--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -12,15 +12,15 @@ skel_csv=output/skel/
 optical_csv=output/vid/
 appear_csv=output/appear/
 rate=333ms
-lmda=1e9
-alfa=1e-9
+lmda=1e6
+alfa=1e2
 kappa=1
 pca_dim=30
 pca_explained=0.95
 pca=1
-# to run individual, change epoch to 1 and stratified to 0, use_cache to 0, and use_sampler to 0
-# to change to scene_motion, change cache_tag to april_27 and pca_tag
-epochs=8
+# run individual, epoch=1, stratified=0, use_cache=0, use_sampler=0, use_shared_pca=0
+# to change to skel, use_position=1, cache_tag=may_03_use_skel2D_individual, pca_tag=may_03_use_skel2D_individual
+epochs=4
 num_objects=3
 use_position=0
 train_stratified=1
@@ -30,4 +30,6 @@ cache_tag=april_29_no_sm_seed_individual
 store_frames=1
 use_shared_pca=1
 pca_tag=april_09_test_refactor_individual
-use_sampler=0
+use_sampler=1
+lr=1e-2
+tag=may_20_alfa0_valid
