--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,9 +1,9 @@
 [TEST-SEM]
 seg_path=database.200731.1.csv
 grain=fine
-train=4.4.2_kinect
+;train=4.4.2_kinect
 ;valid=3.3.10_kinect
-;train=train.txt
+train=train.txt
 valid=valid.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
@@ -20,7 +20,7 @@ pca_dim=30
 pca_explained=0.95
 # run individual, epoch=1, stratified=0, use_cache=0, use_sampler=0, use_shared_pca=0
 # to change to skel, use_position=1, cache_tag=may_03_use_skel2D_individual, pca_tag=may_03_use_skel2D_individual
-epochs=60
+epochs=180
 num_objects=3
 use_position=0
 train_stratified=1
@@ -31,5 +31,5 @@ store_frames=1
 use_shared_pca=1
 pca_tag=may_20_alfa0_appear_cont_individual_all_30
 use_sampler=1
-lr=1e-3
+lr=1e-2
 tag=may_20_alfa0_appear_cont
