--- a/configs/config_tracking_to_correct_label.ini
+++ b/configs/config_tracking_to_correct_label.ini
@@ -1,11 +1,11 @@
 [Tracking]
 
-model_path=tracking/r50_l234_dwxcorr.pth
-model_config=configs/r50_l234_dwxcorr.yaml
-;model_path=tracking/alex_dwxcorr.pth
-;model_config=configs/alex_dwxcorr.yaml
+;model_path=tracking/r50_l234_dwxcorr.pth
+;model_config=configs/r50_l234_dwxcorr.yaml
+model_path=tracking/alex_dwxcorr.pth
+model_config=configs/alex_dwxcorr.yaml
 tag=default
-run=4.4.5_C1
+run=6.2.5_kinect
 input_video_dir=data/small_videos/
 input_label_dir=data/ground_truth_labels/
 output_video_dir=output/tracking/
