add code to search lrs, change ne to 1

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,5 +1,6 @@
 [TEST-SEM]
 seg_path=database.200731.1.csv
+# not currently used in the code, but it's ok
 grain=fine
 ;train=4.4.2_kinect
 ;valid=3.3.10_kinect
