fixing mismatching dimensions for tracking

--- a/configs/config_visualize_csv_positions.ini
+++ b/configs/config_visualize_csv_positions.ini
@@ -1,6 +1,6 @@
 [Tracking]
 
 input_video_path=data/small_videos/6.2.1_kinect_trim.mp4
-input_label_path=data/ground_truth_labels/6.2.1_kinect_labels_fixed.csv
-output_video_path=output/label/6.2.1_kinect_x2.avi
+input_label_path=data/ground_truth_labels/6.2.1_kinect_labels.csv
+output_video_path=output/label/6.2.1_kinect.avi
 
