non standardize objhand, non sampler

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -2,9 +2,9 @@
 seg_path=database.200731.1.csv
 # not currently used in the code, but it's ok
 grain=fine
-;train=4.4.2_kinect
-;valid=3.3.10_kinect
-train=train.txt
+train=2.4.7_kinect
+;valid=6.2.10_kinect
+;train=train.txt
 valid=valid.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
@@ -14,7 +14,7 @@ optical_csv=output/vid/
 appear_csv=output/appear/
 rate=333ms
 lmda=1e6
-alfa=1e2
+alfa=1e-2
 kappa=1
 pca=1
 pca_dim=30
@@ -27,10 +27,10 @@ use_position=0
 train_stratified=1
 n_hidden=15
 use_cache=1
-cache_tag=may_20_alfa0_appear_cont_individual
+use_sampler=0
+cache_tag=sep_06_std_objhand
 store_frames=1
 use_shared_pca=1
-pca_tag=may_20_alfa0_appear_cont_individual_all_30
-use_sampler=1
+pca_tag=sep_06_std_objhand_all_30
 lr=1e-2
-tag=may_20_alfa0_appear_cont
+tag=sep_06_std_nonsampler
