--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -2,9 +2,9 @@
 seg_path=database.200731.1.csv
 # not currently used in the code, but it's ok
 grain=fine
-train=2.4.7_kinect
-;valid=6.2.10_kinect
-;train=train.txt
+;train=2.4.7_kinect
+;valid=3.4.10_kinect
+train=train.txt
 valid=valid.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
@@ -13,7 +13,7 @@ skel_csv=output/skel/
 optical_csv=output/vid/
 appear_csv=output/appear/
 rate=333ms
-lmda=1e6
+lmda=1e4
 alfa=1e-2
 kappa=1
 pca=1
@@ -21,6 +21,7 @@ pca_dim=30
 pca_explained=0.95
 # run individual, epoch=1, stratified=0, use_cache=0, use_sampler=0, use_shared_pca=0
 # to change to skel, use_position=1, cache_tag=may_03_use_skel2D_individual, pca_tag=may_03_use_skel2D_individual
+# go to run_sem_pretrain, change is_eval to False, and comment the code that call run_sem_and_plot.
 epochs=180
 num_objects=3
 use_position=0
@@ -28,9 +29,9 @@ train_stratified=1
 n_hidden=15
 use_cache=1
 use_sampler=0
-cache_tag=sep_06_std_objhand
+cache_tag=sep_06_scene_nonstd_nonsampler
 store_frames=1
 use_shared_pca=1
-pca_tag=sep_06_std_objhand_all_30
-lr=1e-2
-tag=sep_06_std_nonsampler
+pca_tag=sep_06_scene_nonstd_nonsampler_all_30
+lr=1e-3
+tag=sep_06_scene_nonstd_nonsampler
