--- a/environment_sem_MacOS.yml
+++ b/environment_sem_MacOS.yml
@@ -4,9 +4,8 @@ channels:
   - conda-forge
 dependencies:
   - python=3.7
-  - tensorflow=2.1.0
-  - tensorflow-estimator=2.1.0
-  - numpy=1.19.2
+  - tensorflow=2.4.1
+  - numpy=1.19.5
   - joblib
   - scipy
   - scikit-learn=0.23.2
@@ -22,12 +21,10 @@ dependencies:
   - coloredlogs
   - colorlog
   - gensim=3.8.0
-  - opencv=3.4.2
+  - opencv
   - statsmodels
   - ipython
   - jupyter
   - pip
-  - panel=0.11.3
-  - holoviews=1.14.5
   - pip:
       - ray[default]==1.5.1
