--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -3,8 +3,9 @@ seg_path=database.200731.1.csv
 # not currently used in the code, but it's ok
 grain=fine
 ;train=2.4.7_kinect
+train=4.4.1_kinect
 ;valid=3.4.10_kinect
-train=train.txt
+;train=train.txt
 valid=valid.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
@@ -22,16 +23,16 @@ pca_explained=0.95
 # run individual, epoch=1, stratified=0, use_cache=0, use_sampler=0, use_shared_pca=0
 # to change to skel, use_position=1, cache_tag=may_03_use_skel2D_individual, pca_tag=may_03_use_skel2D_individual
 # go to run_sem_pretrain, change is_eval to False, and comment the code that call run_sem_and_plot.
-epochs=180
+epochs=1
 num_objects=3
 use_position=0
-train_stratified=1
+train_stratified=0
 n_hidden=15
-use_cache=1
+use_cache=0
 use_sampler=0
 cache_tag=sep_06_scene_nonstd_nonsampler
 store_frames=1
-use_shared_pca=1
+use_shared_pca=0
 pca_tag=sep_06_scene_nonstd_nonsampler_all_30
 lr=1e-3
-tag=sep_06_scene_nonstd_nonsampler
+tag=oct_22_global_std_skel
