finalize using global std skel

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -2,11 +2,10 @@
 seg_path=database.200731.1.csv
 # not currently used in the code, but it's ok
 grain=fine
-;train=2.4.7_kinect
-train=4.4.1_kinect
+;train=4.4.1_kinect
 ;valid=3.4.10_kinect
-;train=train.txt
-valid=valid.txt
+train=qualified_train.txt
+valid=qualified_valid.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
 objspeed_csv=output/objspeed/
@@ -14,8 +13,8 @@ skel_csv=output/skel/
 optical_csv=output/vid/
 appear_csv=output/appear/
 rate=333ms
-lmda=1e4
-alfa=1e-2
+lmda=1e8
+alfa=1e-4
 kappa=1
 pca=1
 pca_dim=30
@@ -23,16 +22,16 @@ pca_explained=0.95
 # run individual, epoch=1, stratified=0, use_cache=0, use_sampler=0, use_shared_pca=0
 # to change to skel, use_position=1, cache_tag=may_03_use_skel2D_individual, pca_tag=may_03_use_skel2D_individual
 # go to run_sem_pretrain, change is_eval to False, and comment the code that call run_sem_and_plot.
-epochs=1
+epochs=100
 num_objects=3
 use_position=0
 train_stratified=0
-n_hidden=15
-use_cache=0
+n_hidden=30
+use_cache=1
 use_sampler=0
-cache_tag=sep_06_scene_nonstd_nonsampler
+cache_tag=oct_22_global_std_skel
 store_frames=1
-use_shared_pca=0
-pca_tag=sep_06_scene_nonstd_nonsampler_all_30
+use_shared_pca=1
+pca_tag=oct_22_global_std_skel_all_30
 lr=1e-3
 tag=oct_22_global_std_skel
