use individual PCA

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -31,7 +31,10 @@ use_cache=1
 use_sampler=0
 cache_tag=oct_22_global_std_skel
 store_frames=1
-use_shared_pca=1
+# global pca means components are derived from all videos
+use_global_pca=1
+# individual feature means each type of feature is assigned a designated # components
+use_ind_feature_pca=1
 pca_tag=oct_22_global_std_skel_all_30
 lr=1e-3
 tag=oct_22_global_std_skel
