--- a/environment_tracking.yml
+++ b/environment_tracking.yml
@@ -1,26 +1,19 @@
-name: pt-tf-37
+name: pt-37
 channels:
   - defaults
   - conda-forge
   - pytorch
 dependencies:
   - python=3.7
-  - tensorflow=2.1.0
-  - tensorboard=2.1.1
-  - pytorch=0.4.1
+  - pytorch
+  - cuda92
   - torchvision
   - scipy=1.4.1
   - scikit-learn=0.23.2
-  - numpy=1.19.2
+  - numpy
   - pandas
-  - ipywidgets
-  - jupyterlab
-  - jupyter
-  - nodejs
-  - ipywebrtc
   - matplotlib
   - seaborn
-  - nodejs
   - pyyaml
   - yacs
   - tqdm
