use rotated skeleton in config

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -4,8 +4,8 @@ seg_path=database.200731.1.csv
 grain=fine
 ;train=4.4.1_kinect
 ;valid=3.4.10_kinect
-train=qualified_train.txt
-valid=qualified_valid.txt
+train=inter_qualified_train.txt
+valid=inter_qualified_valid.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
 objspeed_csv=output/objspeed/
@@ -19,7 +19,7 @@ kappa=1
 pca=1
 pca_dim=30
 pca_explained=0.95
-# run individual, epoch=1, stratified=0, use_cache=0, use_sampler=0, use_shared_pca=0
+# run individual, epoch=1, stratified=0, use_cache=0, pca=0
 # to change to skel, use_position=1, cache_tag=may_03_use_skel2D_individual, pca_tag=may_03_use_skel2D_individual
 # go to run_sem_pretrain, change is_eval to False, and comment the code that call run_sem_and_plot.
 epochs=100
@@ -29,12 +29,14 @@ train_stratified=0
 n_hidden=30
 use_cache=1
 use_sampler=0
-cache_tag=oct_22_global_std_skel
+;cache_tag=oct_22_global_std_skel
+cache_tag=dec_6_rotated_skel
 store_frames=1
 # global pca means components are derived from all videos
 use_global_pca=1
 # individual feature means each type of feature is assigned a designated # components
 use_ind_feature_pca=1
-pca_tag=oct_22_global_std_skel_all_30
+;pca_tag=oct_22_global_std_skel_all_30
+pca_tag=dec_6_rotated_skel_all_30
 lr=1e-3
-tag=oct_22_global_std_skel
+tag=holder
