--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -3,10 +3,10 @@
 seg_path=seg_data_analysis_clean.csv
 # not currently used in the code, but it's ok
 grain=fine
-;train=4.4.1_kinect
-;valid=3.4.10_kinect
-train=inter_qualified_train.txt
-valid=inter_qualified_valid.txt
+train=1.1.2_kinect
+valid=1.1.3_kinect
+;train=qualified_train_.8_.8.txt
+;valid=qualified_valid_.8_.8.txt
 movie=data/small_videos/
 objhand_csv=output/objhand/
 objspeed_csv=output/objspeed/
@@ -20,10 +20,10 @@ kappa=1
 pca=1
 pca_dim=30
 pca_explained=0.95
-# run individual, epoch=1, stratified=0, use_cache=0, pca=0
+# run individual, epoch=1, stratified=0, use_cache=0, pca=0, intersect_features_1.txt
 # to change to skel, use_position=1, cache_tag=may_03_use_skel2D_individual, pca_tag=may_03_use_skel2D_individual
 # go to run_sem_pretrain, change is_eval to False, and comment the code that call run_sem_and_plot.
-epochs=72
+epochs=108
 num_objects=3
 use_position=0
 train_stratified=0
@@ -31,13 +31,15 @@ n_hidden=30
 use_cache=1
 use_sampler=0
 ;cache_tag=oct_22_global_std_skel
-cache_tag=dec_6_rotated_skel
+;cache_tag=dec_6_rotated_skel
+cache_tag=july_18_all_activities
 store_frames=1
 # global pca means components are derived from all videos
 use_global_pca=1
 # individual feature means each type of feature is assigned a designated # components
 use_ind_feature_pca=1
 ;pca_tag=oct_22_global_std_skel_all_30
-pca_tag=dec_6_rotated_skel_all_30
+pca_tag=july_18_all_activities_all_30
+;pca_tag=dec_6_rotated_skel_all_30
 lr=1e-3
-tag=holder
+tag=july_18_all_activities
