refactor, upload scripts

--- a/configs/config_objhand_features.ini
+++ b/configs/config_objhand_features.ini
@@ -1,9 +1,8 @@
 [OBJECT-HAND]
 
-run=4.4.4_kinect
-;run=track_complete.txt
-;run=depth.txt
+run=track_kinect_complete.txt
 input_track_csv=output/tracking/
 input_skel_csv=data/clean_skeleton_data/
 ;input_skel_csv=data/projected_skeletons/
 output_objhand_csv=output/objhand/
+feature_tag=sep_09
