--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,45 +1,26 @@
-[TEST-SEM]
+[SEM]
 ;seg_path=database.200731.1.csv
 seg_path=seg_data_analysis_clean.csv
-# not currently used in the code, but it's ok
-grain=fine
-train=1.1.2_kinect
+train=1.1.6_kinect
 valid=1.1.3_kinect
 ;train=qualified_train_.8_.8.txt
 ;valid=qualified_valid_.8_.8.txt
-movie=data/small_videos/
-objhand_csv=output/objhand/
-objspeed_csv=output/objspeed/
-skel_csv=output/skel/
-optical_csv=output/vid/
-appear_csv=output/appear/
 rate=333ms
+# sCRP hyper-parameters
 lmda=1e8
 alfa=1e-4
 kappa=1
-pca=1
-pca_dim=30
-pca_explained=0.95
-# run individual, epoch=1, stratified=0, use_cache=0, pca=0, intersect_features_1.txt
-# to change to skel, use_position=1, cache_tag=may_03_use_skel2D_individual, pca_tag=may_03_use_skel2D_individual
-# go to run_sem_pretrain, change is_eval to False, and comment the code that call run_sem_and_plot.
 epochs=108
-num_objects=3
-use_position=0
+# train.txt contains a list of train*.txt instead of a list of runs
 train_stratified=0
 n_hidden=30
-use_cache=1
-use_sampler=0
-;cache_tag=oct_22_global_std_skel
-;cache_tag=dec_6_rotated_skel
-cache_tag=july_18_all_activities
-store_frames=1
-# global pca means components are derived from all videos
-use_global_pca=1
-# individual feature means each type of feature is assigned a designated # components
-use_ind_feature_pca=1
-;pca_tag=oct_22_global_std_skel_all_30
-pca_tag=july_18_all_activities_all_30
-;pca_tag=dec_6_rotated_skel_all_30
 lr=1e-3
-tag=july_18_all_activities
+feature_tag=sep_09
+store_frames=1
+# whether to PCA input or not
+pca=1
+# whether each type was PCA-ed individually or concatenated before PCA-ed
+use_ind_feature_pca=1
+# specific PCA tag (each tag could differ in explained variance, etc.)
+pca_tag=all
+sem_tag=refactor_sep_09
