--- a/configs/config_appear.ini
+++ b/configs/config_appear.ini
@@ -1,6 +1,7 @@
 [Appear]
 ;run=1.1.1_kinect
-run=track_complete.txt
+run=track_kinect_complete.txt
 input_csv_tracking=output/tracking/
 ;input_csv_tracking=data/merged/6.2.4_C1_merged.csv
 output_csv_appear=output/appear/
+feature_tag=sep_09
