--- a/configs/config_skelfeatures.ini
+++ b/configs/config_skelfeatures.ini
@@ -1,8 +1,9 @@
 [Skel features]
 
 ;run=6.2.4_C1
-run=track_complete.txt
+run=track_kinect_complete.txt
 ;skel_csv_in=data/projected_skeletons/
 skel_csv_in=data/clean_skeleton_data/
 skel_csv_out=output/skel/
 joints=all
+feature_tag=sep_09
