--- a/configs/config_vidfeatures.ini
+++ b/configs/config_vidfeatures.ini
@@ -1,7 +1,8 @@
 [Vid Features]
 
 ;run=6.2.4_C1
-run=track_complete.txt
+run=track_kinect_complete.txt
+feature_tag=sep_09
 input_video_path=data/small_videos/
 output_csv_path=output/vid/
 pyr_scale=0.5
@@ -12,4 +13,3 @@ poly_n=5
 poly_sigma=1.2
 flags=0
 skip_frame=10
-
