--- a/configs/config_optical_features.ini
+++ b/configs/config_optical_features.ini
@@ -1,10 +1,9 @@
-[Vid Features]
-
+[Optical Features]
 ;run=6.2.4_C1
-run=track_kinect_complete.txt
+run=individual_features/track_kinect_complete.txt
 feature_tag=sep_09
 input_video_path=data/small_videos/
-output_csv_path=output/vid/
+output_csv_path=output/optical/
 pyr_scale=0.5
 levels=3
 winsize=15
