--- a/configs/config_tracking_to_correct_label.ini
+++ b/configs/config_tracking_to_correct_label.ini
@@ -4,7 +4,7 @@
 ;model_config=configs/r50_l234_dwxcorr.yaml
 model_path=tracking/alex_dwxcorr.pth
 model_config=configs/alex_dwxcorr.yaml
-tag=default
+track_tag=default
 run=6.2.5_kinect
 input_video_dir=data/small_videos/
 input_label_dir=data/ground_truth_labels/
