--- a/configs/config_objhand_features.ini
+++ b/configs/config_objhand_features.ini
@@ -1,7 +1,8 @@
 [OBJECT-HAND]
 
-run=track_kinect_complete.txt
+run=individual_features/track_kinect_complete.txt
 input_track_csv=output/tracking/
+input_depth=output/depth/
 input_skel_csv=data/clean_skeleton_data/
 ;input_skel_csv=data/projected_skeletons/
 output_objhand_csv=output/objhand/
