--- a/configs/config_skel_features.ini
+++ b/configs/config_skel_features.ini
@@ -1,9 +1,10 @@
 [Skel features]
 
 ;run=6.2.4_C1
-run=individual_features/track_kinect_complete.txt
+run=output/track_kinect_complete.txt
 ;skel_csv_in=data/projected_skeletons/
 skel_csv_in=data/clean_skeleton_data/
 skel_csv_out=output/skel/
+skel_stats_out=output/
 joints=all
 feature_tag=sep_09
