update paths, upload files

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -1,10 +1,11 @@
 [SEM]
 ;seg_path=database.200731.1.csv
-seg_path=seg_data_analysis_clean.csv
-train=1.1.6_kinect
-valid=1.1.3_kinect
-;train=qualified_train_.8_.8.txt
-;valid=qualified_valid_.8_.8.txt
+seg_path=resources/seg_data_analysis_clean.csv
+action_path=resources/event_annotation_timing_average.csv
+;train=2.4.9_kinect
+;valid=1.1.3_kinect
+train=output/train_sep_09.txt
+valid=output/valid_sep_09.txt
 rate=333ms
 # sCRP hyper-parameters
 lmda=1e8
@@ -13,7 +14,7 @@ kappa=1
 epochs=108
 # train.txt contains a list of train*.txt instead of a list of runs
 train_stratified=0
-n_hidden=30
+n_hidden=15
 lr=1e-3
 feature_tag=sep_09
 store_frames=1
