--- a/configs/config_preprocess.ini
+++ b/configs/config_preprocess.ini
@@ -1,12 +1,12 @@
 [PREPROCESS_EACH_RUN]
 # this config file is shared between preprocess_indv_run.py and parallel_preprocess_indv_run.py
 # run can be a video name (used by preprocess_indv_run.py) or a list (used by parallel_preprocess_indv_run.py)
-;run=objhand_complete_sep_09.txt
-run=1.1.6_kinect
+run=output/objhand_complete_sep_09.txt
+;run=2.4.9_kinect
 
 objhand_csv=output/objhand/
 num_objects=3
-glove=src/preprocess_features/gen_sim_glove_50.pkl
+glove=resources/gen_sim_glove_50.pkl
 
 skel_csv=output/skel/
 use_skel_position=0
@@ -23,6 +23,6 @@ appear_csv=output/appear/
 rate=333ms
 feature_tag=sep_09
 # to get fps and resample correctly
-run_specs=src/preprocess_features/run_specs.csv
+run_specs=resources/run_specs.csv
 
 out_preprocess_pkl=output/preprocessed_features/
