update readme, add files, refactor

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -2,14 +2,16 @@
 ;seg_path=database.200731.1.csv
 seg_path=resources/seg_data_analysis_clean.csv
 action_path=resources/event_annotation_timing_average.csv
-;train=2.4.9_kinect
-;valid=1.1.3_kinect
-train=output/train_sep_09.txt
-valid=output/valid_sep_09.txt
+preprocessed_features_path=output/preprocessed_features/
+sem_results_path=output/run_sem/
+train=1.2.3_kinect
+valid=2.4.1_kinect
+;train=output/train_sep_09.txt
+;valid=output/valid_sep_09.txt
 rate=333ms
 # sCRP hyper-parameters
 lmda=1e8
-alfa=1e-4
+alfa=1e-6
 kappa=1
 epochs=108
 # train.txt contains a list of train*.txt instead of a list of runs
