refactor and add trigger mechanism

--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -4,15 +4,21 @@ seg_path=resources/seg_data_analysis_clean.csv
 action_path=resources/event_annotation_timing_average.csv
 preprocessed_features_path=output/preprocessed_features/
 sem_results_path=output/run_sem/
-train=1.2.3_kinect
-valid=2.4.1_kinect
+;train=1.2.3_kinect
+;valid=2.4.1_kinect
 ;train=output/train_sep_09.txt
 ;valid=output/valid_sep_09.txt
+train=output/small_train.txt
+valid=output/small_valid.txt
 rate=333ms
 # sCRP hyper-parameters
-lmda=1e8
-alfa=1e-6
+lmda=1e0
+alfa=1e-2
 kappa=1
+# event boundary parameters
+;trigger=pe
+trigger=uncertainty
+threshold=3e-3
 epochs=108
 # train.txt contains a list of train*.txt instead of a list of runs
 train_stratified=0
@@ -26,4 +32,4 @@ pca=1
 use_ind_feature_pca=1
 # specific PCA tag (each tag could differ in explained variance, etc.)
 pca_tag=all
-sem_tag=refactor_sep_09
+sem_tag=dec_17_uncertainty
