adjust #boundaries, update run_specs.csv

--- a/configs/config_preprocess.ini
+++ b/configs/config_preprocess.ini
@@ -1,8 +1,8 @@
 [PREPROCESS_EACH_RUN]
 # this config file is shared between preprocess_indv_run.py and parallel_preprocess_indv_run.py
 # run can be a video name (used by preprocess_indv_run.py) or a list (used by parallel_preprocess_indv_run.py)
-run=output/objhand_complete_sep_09.txt
-;run=2.4.9_kinect
+;run=output/objhand_complete_sep_09.txt
+run=2.4.9_kinect
 
 objhand_csv=output/objhand/
 num_objects=3
