--- a/configs/config_run_sem.ini
+++ b/configs/config_run_sem.ini
@@ -4,12 +4,12 @@ seg_path=resources/seg_data_analysis_clean.csv
 action_path=resources/event_annotation_timing_average.csv
 preprocessed_features_path=output/preprocessed_features/
 sem_results_path=output/run_sem/
-;train=1.2.3_kinect
-;valid=2.4.1_kinect
-;train=output/train_sep_09.txt
-;valid=output/valid_sep_09.txt
-train=output/small_train.txt
-valid=output/small_valid.txt
+train=1.2.3_kinect
+valid=2.4.1_kinect
+; train=output/train_sep_09.txt
+; valid=output/valid_sep_09.txt
+;train=output/small_train.txt
+;valid=output/small_valid.txt
 rate=333ms
 # sCRP hyper-parameters
 lmda=1e0
@@ -19,7 +19,7 @@ kappa=1
 ;trigger=pe
 trigger=uncertainty
 threshold=3e-3
-epochs=101
+epochs=11
 # train.txt contains a list of train*.txt instead of a list of runs
 train_stratified=0
 n_hidden=15
@@ -33,3 +33,4 @@ use_ind_feature_pca=1
 # specific PCA tag (each tag could differ in explained variance, etc.)
 pca_tag=all
 sem_tag=dec_17_uncertainty
+equal_sigma=0
